# dynamic-dns-updater

./: .gitignore  LICENSE  README.md  api.py  config.example.yaml  config.py  dns_updaters.py  example.env  ip_providers.py  main.py  pyproject.toml  tasks.py
providers/: dns.py  ip.py
providers/dns/: __init__.py  cloudflare.py
providers/ip/: __init__.py  ipify.py  ipinfo.py
