[project]
name = "dynamic-dns-updater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiocron>=2.1",
    "aiohttp[speedups]>=3.13.1",
    "cloudflare>=4.3.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.0",
    "ruamel-yaml>=0.18.16",
]
